--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,2 @@
 .DS_Store
-atom.symlink/compile-cache
-atom.symlink/storage
-atom.symlink/.apm
-atom.symlink/.node-gyp
-atom.symlink/.storage
+.gitconfig.local
