Update dot files to Fish and clear out old zsh specifics (#4)
* Start cleaning up

* Move 85% into Fish's setup

* More clean and prep for gitconfig

* Fix permission and setup file

* Ignore the local gitconfig

* Ignore Brewfile activity

* Allow for Brewfile and brew to run on bootstrap

* Init rbenv

* Set rbenv the correct way

* Move rbenv init and add gemrc setup

* Update the README

Co-authored-by: Kyle Daigle <kdaigle@MacBook-Air.localdomain>

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
 .DS_Store
-atom.symlink/compile-cache
-atom.symlink/storage
-atom.symlink/.apm
-atom.symlink/.node-gyp
-atom.symlink/.storage
+.gitconfig.local
+Brewfile.lock.json
